--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -148,3 +148,45 @@
 
 /* Add more styles as per your design requirements */
 
+.card-service-provider-image {
+  width: 100%;
+  height: 200px; /* Adjust as needed */
+  object-fit: cover;
+}
+
+.service-provider-avatar {
+  width: 30px; /* Adjust as needed */
+  height: 30px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 15px; /* Adjusted margin */
+}
+
+.card-service-price {
+  font-size: 1.2em;
+}
+
+/* Additional styles for consistent card layout */
+.card-body {
+  padding: 10px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding: 5px; /* Removes unnecessary padding */
+}
+
+/* Adjust the height as per your content */
+.card-service-provider-image {
+  height: 150px; /* Example height */
+}
+
+/* Ensure consistent height across cards */
+.card.h-100 {
+  height: 100%;
+}
