--- a/app/views/services/_services.html.erb
+++ b/app/views/services/_services.html.erb
@@ -1,47 +1,58 @@
 <div class="services-container row row-cols-1 row-cols-md-2 g-4" data-filtered-queries-target="services">
-<% services.each do |service| %>
-  <div class="col">
-    <div class="card" style="position: relative;">
-      <%= cl_image_tag service.service_picture.key, background: 'black', aspect_ratio: '2.0', crop: :crop, class: "card-service-provider-image" %>
-      <div class="card-body">
-        <div class="card-title-and-tags">
-          <div class="card-title-and-rating">
-            <h5 class="card-title" style="margin-bottom: 0;"><%= service.title %></h5>
-            <div style="font-size: 0.8em;">
+  <% services.each do |service| %>
+  <%= link_to service_path(service), class: "text-decoration-none text-dark" do %>
+    <div class="col">
+        <div class="card h-100" style="position: relative;">
+          <%= cl_image_tag service.service_picture.key, background: 'black', aspect_ratio: '2.0', crop: :crop, class: "card-service-provider-image" %>
+          <div class="card-body d-flex flex-column">
+            <div class="card-title-and-tags mb-3">
+              <div class="card-title-and-description">
+              <h5 class="card-title"><%= service.title %></h5>
+                <div class="card-description mt-3">
+                  <p class="card-text" style="font-size: 13px"><i><%= service.description %></p></i>
+                </div>
+              </div>
+              <div class="card-rating mb-auto">
               <% if service.bookings.count.positive? %>
                 <% average_rating = service.average_rating %>
                 <% 5.times do |i| %>
                   <i class="fas fa-star <%= 'text-warning' if i < average_rating %>"></i>
                 <% end %>
                 <span>(<%= average_rating.round(1) %>)</span>
-              <% else %>
+                <% else %>
                 <p>No reviews yet.</p>
               <% end %>
             </div>
+            </div>
+            <div class="card-service-provider d-flex align-items-center mt-3">
+              <%= cl_image_tag service.user.profile_picture.key, class: "service-provider-avatar mr-2" %> <!-- Placeholder for avatar -->
+              <span style="font-weight: bold"><%= "#{service.user.first_name} #{service.user.last_name.chars.first}" %></span>
+            </div>
+            <div class="card-address mb-4">
+              <p class="card-text"><%= service.address %></p>
+            </div>
+            <div class="card-footer mt-auto d-flex justify-content-between align-items-center">
+              <b class="card-service-price float-right"><%= service.price %> €</b>
+                <div class="pet_categories">
+                <ul class="list-inline">
+                  <% service.pet_categories.each do |pet_category| %>
+                    <li class="list-inline-item">
+                      <% pet = pet_category.pet_category.downcase.gsub(' ', '-') %>
+                      <%= image_tag "icons/#{pet}.svg", class: "icon icon-tag" %>
+                    </li>
+                  <% end %>
+                </ul>
+              </div>
+            </div>
           </div>
-          <div class="pet_categories">
-          <ul class="list-inline">
-          <% service.pet_categories.each do |pet_category| %>
-            <li class="list-inline-item">
-              <% pet = pet_category.pet_category.downcase.gsub(' ', '-') %>
-              <!-- <%= pet_category.pet_category %> -->
-              <%= image_tag "icons/#{pet}.svg", class: "icon icon-tag" %>
-            </li>
-          <% end %>
-          </ul>
-          </div>
-        </div>
-        <h5 class="card-service-provider"><%= "#{service.user.first_name} #{service.user.last_name}" %></h5>
-        <p class="card-text"><%= service.address %></p>
-        <div class="card-price-and-details-btn">
-          <b class="card-service-price"><%= service.price %> €</b>
-          <%= link_to "see details", service_path(service), class: "btn btn-primary"%>
         </div>
       </div>
-    </div>
-  </div>
-<% end %>
+    <% end %>
+  <% end %>
 </div>
+
+
+
 <div style="width: 100%; height: 800px; position: sticky; top: 10px;"
       class="custom-map"
       data-controller="map"
