Added map progressively zooming in

--- a/app/assets/stylesheets/pages/_services_index.scss
+++ b/app/assets/stylesheets/pages/_services_index.scss
@@ -12,11 +12,21 @@
 }
 
 .query-form {
-  width: 60%;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  height: 11em;
+  height: 7em;
+}
+
+.slider-container {
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  right: 0;
+  bottom: 10px;
 }
 
 .filter-buttons-container {
