--- a/app/views/services/_services.html.erb
+++ b/app/views/services/_services.html.erb
@@ -2,7 +2,7 @@
   <% services.each do |service| %>
   <%= link_to service_path(service), class: "text-decoration-none text-dark" do %>
     <div class="col">
-        <div class="card h-100" style="position: relative;">
+        <div class="card h-100 service-index-card" style="position: relative;">
           <%= cl_image_tag service.service_picture.key, background: 'black', aspect_ratio: '2.0', crop: :crop, class: "card-service-provider-image" %>
           <div class="card-body d-flex flex-column">
             <div class="card-title-and-tags mb-3">
