--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,8 @@
   <div class="container">
     <h1><strong>Loving Pet Care in Your Neighbourhood!</strong></h1>
     <p>Book trusted sitters, dog walkers, and many more services.</p>
-    <a class="btn btn-large btn-success" href="/services">Search</a>
+    <%= link_to "Search", "/services", class: "btn btn-large btn-success"%>
+    <%# <a class="btn btn-large btn-success" href="/services">Search</a> %>
   </div>
 </div>
 <br>
