removed average star rating on services index

--- a/app/views/services/_services.html.erb
+++ b/app/views/services/_services.html.erb
@@ -18,7 +18,8 @@
                 <% 5.times do |i| %>
                   <i class="fas fa-star <%= 'text-warning' if i < average_rating %>"></i>
                 <% end %>
-                <span>(<%= average_rating.round(1) %>)</span>
+                <!-- <span>(<%= average_rating.round(1) %>)</span> -->
+
                 <% else %>
                 <p>No reviews yet.</p>
               <% end %>
